Fix page z-index issue

--- a/style.css
+++ b/style.css
@@ -24,8 +24,14 @@ a{
   animation-delay:1.5s!important;
 }
 @keyframes fadein {
-    from {opacity:0;}
-    to {opacity:1;}
+    0% {
+      opacity:0;
+      display:initial;
+    }
+    100% {
+      opacity:1;
+      visibility:visible!important;
+    }
 }
 @keyframes moveaway {
     0% {
@@ -51,15 +57,18 @@ a{
   animation-timing-function:ease-in-out;
   animation-delay:4s;
   animation-fill-mode:forwards;
+  z-index:10;
 }
 .page-2 {
+  z-index: 9;
   opacity:0;
-  animation: fadein 1.3s ease-in-out 5s 1 normal forwards, moveaway 1.5s ease-in-out 7s normal forwards;
+  animation: fadein 1.3s ease-in-out 5s 1 normal forwards, moveaway 1.5s ease-in-out 8s normal forwards;
 }
 .page-3 {
+  z-index: 8;
   opacity:0;
   animation-name: fadein;
-  animation-delay: 7.7s;
+  animation-delay: 8.6s;
   animation-duration: 1.5s;
   animation-fill-mode: forwards;
 }
